--- a/Package_Tracking_Backend/db/Dockerfile
+++ b/Package_Tracking_Backend/db/Dockerfile
@@ -1,10 +1,10 @@
 # Use a lightweight base image for PostgreSQL
 FROM postgres:alpine
 
-# Set environment variables (adjust to your needs)
+# Set environment variables for PostgreSQL
 ENV POSTGRES_USER=postgres
 ENV POSTGRES_PASSWORD=123
 ENV POSTGRES_DB=PackageTracking_db
 
-# Expose the default PostgreSQL port
+# Expose the PostgreSQL port
 EXPOSE 5432
