--- a/Package_Tracking_Backend/db/Dockerfile
+++ b/Package_Tracking_Backend/db/Dockerfile
@@ -6,5 +6,7 @@ ENV POSTGRES_USER=postgres
 ENV POSTGRES_PASSWORD=123
 ENV POSTGRES_DB=PackageTracking_db
 
+RUN chmod -R 777 /var/lib/postgresql/data
+
 # Expose the PostgreSQL port
 EXPOSE 5432
